...
          borderRadius: BorderRadius.circular(10),
        ),
      );

      return Pinput(
        controller: _textController,
        key: const Key("openid4vci_tx_code_input_field"),
        focusNode: _focusNode,
        autofocus: true,
        keyboardType: _keyboardType,
        inputFormatters: _inputFormatters,
        mainAxisAlignment: MainAxisAlignment.start,
        defaultPinTheme: defaultPinTheme,
...
